# SwissArmyKnifeGIS

./: INSTALL_AND_USAGE.md  README.md  TODO.md  environment.yml  pyproject.toml  setup.py
src/swissarmyknifegis/: __init__.py  __main__.py  app.py
src/swissarmyknifegis/core/: __init__.py  cities.py  config_manager.py  coord_utils.py  error_utils.py  exceptions.py  gdal_utils.py  geo_export_utils.py  layer_manager.py  validation.py
src/swissarmyknifegis/gui/: __init__.py  main_window.py  map_canvas.py
src/swissarmyknifegis/resources/: __init__.py
src/swissarmyknifegis/tools/: __init__.py  about_tab.py  base_tool.py  bbox_creator.py  crs_converter.py  gis_cropper.py  quad_bbox_creator.py  raster_merger.py
